infra/k3s/applications/auth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: app
  labels:
    app: auth
spec:
  type: ClusterIP
  ports:
    - port: 2799
      targetPort: 2799
      protocol: TCP
      name: http
  selector:
    app: auth
